# stack

kernel/: configure
kernel/ipcps/: Makefile.in  shim-eth-core.c  shim-eth-rina.c
rina-tools/src/key-managers/: Makefile.am
rina-tools/src/manager/: Makefile.am
rina-tools/src/rlite/: Makefile.am  Makefile.inc  fdfwd.cpp  fdfwd.hpp  iporinad.cpp
rinad/: configure.ac
rinad/src/common/: rina-configuration.cc  rina-configuration.h
rinad/src/common/encoders/: Makefile.am
rinad/src/ipcm/: addon.cc  configuration.cc  dif-validator.cc  dif-validator.h  ipcm.cc  ipcm.h  ipcp.cc  ipcp.h  main.cc  misc-handlers.cc
rinad/src/ipcm/addons/: Makefile.am  console.cc  ipcm-api.cc  ipcm-api.h
rinad/src/ipcm/addons/proto/: Makefile.am  ipcm_api.proto
rinad/src/ipcp/plugins/sm-cbac/: Makefile.am  Makefile.inc
